parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> expression SEMICOLON
Rule 5     statement -> VAR NAME ASSIGN expression SEMICOLON
Rule 6     statement -> NAME ASSIGN expression SEMICOLON
Rule 7     statement -> function_def
Rule 8     statement -> extern_decl
Rule 9     statement -> RETURN expression SEMICOLON
Rule 10    function_def -> FN NAME LPAREN params RPAREN LBRACE statements RBRACE
Rule 11    params -> params COMMA NAME
Rule 12    params -> NAME
Rule 13    params -> <empty>
Rule 14    extern_decl -> EXTERN NAME LPAREN extern_params RPAREN SEMICOLON
Rule 15    extern_params -> extern_params COMMA extern_type
Rule 16    extern_params -> extern_type
Rule 17    extern_params -> <empty>
Rule 18    extern_type -> NAME
Rule 19    expression -> expression PLUS expression
Rule 20    expression -> expression MINUS expression
Rule 21    expression -> expression TIMES expression
Rule 22    expression -> expression DIVIDE expression
Rule 23    expression -> LPAREN expression RPAREN
Rule 24    expression -> PLUS expression
Rule 25    expression -> MINUS expression
Rule 26    expression -> NUMBER
Rule 27    expression -> NAME
Rule 28    expression -> STRING
Rule 29    expression -> function_call
Rule 30    function_call -> NAME LPAREN args RPAREN
Rule 31    args -> args COMMA expression
Rule 32    args -> expression
Rule 33    args -> <empty>

Terminals, with rules where they appear

ASSIGN               : 5 6
COLON                : 
COMMA                : 11 15 31
DIVIDE               : 22
EXTERN               : 14
FN                   : 10
LBRACE               : 10
LPAREN               : 10 14 23 30
MINUS                : 20 25
NAME                 : 5 6 10 11 12 14 18 27 30
NUMBER               : 26
PLUS                 : 19 24
RBRACE               : 10
RETURN               : 9
RPAREN               : 10 14 23 30
SEMICOLON            : 4 5 6 9 14
STRING               : 28
TIMES                : 21
VAR                  : 5
error                : 

Nonterminals, with rules where they appear

args                 : 30 31
expression           : 4 5 6 9 19 19 20 20 21 21 22 22 23 24 25 31 32
extern_decl          : 8
extern_params        : 14 15
extern_type          : 15 16
function_call        : 29
function_def         : 7
params               : 10 11
program              : 0
statement            : 2 3
statements           : 1 2 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . expression SEMICOLON
    (5) statement -> . VAR NAME ASSIGN expression SEMICOLON
    (6) statement -> . NAME ASSIGN expression SEMICOLON
    (7) statement -> . function_def
    (8) statement -> . extern_decl
    (9) statement -> . RETURN expression SEMICOLON
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . PLUS expression
    (25) expression -> . MINUS expression
    (26) expression -> . NUMBER
    (27) expression -> . NAME
    (28) expression -> . STRING
    (29) expression -> . function_call
    (10) function_def -> . FN NAME LPAREN params RPAREN LBRACE statements RBRACE
    (14) extern_decl -> . EXTERN NAME LPAREN extern_params RPAREN SEMICOLON
    (30) function_call -> . NAME LPAREN args RPAREN

    VAR             shift and go to state 5
    NAME            shift and go to state 6
    RETURN          shift and go to state 9
    LPAREN          shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 13
    STRING          shift and go to state 14
    FN              shift and go to state 16
    EXTERN          shift and go to state 17

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    function_def                   shift and go to state 7
    extern_decl                    shift and go to state 8
    function_call                  shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . expression SEMICOLON
    (5) statement -> . VAR NAME ASSIGN expression SEMICOLON
    (6) statement -> . NAME ASSIGN expression SEMICOLON
    (7) statement -> . function_def
    (8) statement -> . extern_decl
    (9) statement -> . RETURN expression SEMICOLON
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . PLUS expression
    (25) expression -> . MINUS expression
    (26) expression -> . NUMBER
    (27) expression -> . NAME
    (28) expression -> . STRING
    (29) expression -> . function_call
    (10) function_def -> . FN NAME LPAREN params RPAREN LBRACE statements RBRACE
    (14) extern_decl -> . EXTERN NAME LPAREN extern_params RPAREN SEMICOLON
    (30) function_call -> . NAME LPAREN args RPAREN

    $end            reduce using rule 1 (program -> statements .)
    VAR             shift and go to state 5
    NAME            shift and go to state 6
    RETURN          shift and go to state 9
    LPAREN          shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 13
    STRING          shift and go to state 14
    FN              shift and go to state 16
    EXTERN          shift and go to state 17

    statement                      shift and go to state 18
    expression                     shift and go to state 4
    function_def                   shift and go to state 7
    extern_decl                    shift and go to state 8
    function_call                  shift and go to state 15

state 3

    (3) statements -> statement .

    VAR             reduce using rule 3 (statements -> statement .)
    NAME            reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    PLUS            reduce using rule 3 (statements -> statement .)
    MINUS           reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    FN              reduce using rule 3 (statements -> statement .)
    EXTERN          reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> expression . SEMICOLON
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . DIVIDE expression

    SEMICOLON       shift and go to state 19
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 23


state 5

    (5) statement -> VAR . NAME ASSIGN expression SEMICOLON

    NAME            shift and go to state 24


state 6

    (6) statement -> NAME . ASSIGN expression SEMICOLON
    (27) expression -> NAME .
    (30) function_call -> NAME . LPAREN args RPAREN

    ASSIGN          shift and go to state 25
    SEMICOLON       reduce using rule 27 (expression -> NAME .)
    PLUS            reduce using rule 27 (expression -> NAME .)
    MINUS           reduce using rule 27 (expression -> NAME .)
    TIMES           reduce using rule 27 (expression -> NAME .)
    DIVIDE          reduce using rule 27 (expression -> NAME .)
    LPAREN          shift and go to state 26


state 7

    (7) statement -> function_def .

    VAR             reduce using rule 7 (statement -> function_def .)
    NAME            reduce using rule 7 (statement -> function_def .)
    RETURN          reduce using rule 7 (statement -> function_def .)
    LPAREN          reduce using rule 7 (statement -> function_def .)
    PLUS            reduce using rule 7 (statement -> function_def .)
    MINUS           reduce using rule 7 (statement -> function_def .)
    NUMBER          reduce using rule 7 (statement -> function_def .)
    STRING          reduce using rule 7 (statement -> function_def .)
    FN              reduce using rule 7 (statement -> function_def .)
    EXTERN          reduce using rule 7 (statement -> function_def .)
    $end            reduce using rule 7 (statement -> function_def .)
    RBRACE          reduce using rule 7 (statement -> function_def .)


state 8

    (8) statement -> extern_decl .

    VAR             reduce using rule 8 (statement -> extern_decl .)
    NAME            reduce using rule 8 (statement -> extern_decl .)
    RETURN          reduce using rule 8 (statement -> extern_decl .)
    LPAREN          reduce using rule 8 (statement -> extern_decl .)
    PLUS            reduce using rule 8 (statement -> extern_decl .)
    MINUS           reduce using rule 8 (statement -> extern_decl .)
    NUMBER          reduce using rule 8 (statement -> extern_decl .)
    STRING          reduce using rule 8 (statement -> extern_decl .)
    FN              reduce using rule 8 (statement -> extern_decl .)
    EXTERN          reduce using rule 8 (statement -> extern_decl .)
    $end            reduce using rule 8 (statement -> extern_decl .)
    RBRACE          reduce using rule 8 (statement -> extern_decl .)


state 9

    (9) statement -> RETURN . expression SEMICOLON
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . PLUS expression
    (25) expression -> . MINUS expression
    (26) expression -> . NUMBER
    (27) expression -> . NAME
    (28) expression -> . STRING
    (29) expression -> . function_call
    (30) function_call -> . NAME LPAREN args RPAREN

    LPAREN          shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 13
    NAME            shift and go to state 28
    STRING          shift and go to state 14

    expression                     shift and go to state 27
    function_call                  shift and go to state 15

state 10

    (24) expression -> PLUS . expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . PLUS expression
    (25) expression -> . MINUS expression
    (26) expression -> . NUMBER
    (27) expression -> . NAME
    (28) expression -> . STRING
    (29) expression -> . function_call
    (30) function_call -> . NAME LPAREN args RPAREN

    LPAREN          shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 13
    NAME            shift and go to state 28
    STRING          shift and go to state 14

    expression                     shift and go to state 29
    function_call                  shift and go to state 15

state 11

    (25) expression -> MINUS . expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . PLUS expression
    (25) expression -> . MINUS expression
    (26) expression -> . NUMBER
    (27) expression -> . NAME
    (28) expression -> . STRING
    (29) expression -> . function_call
    (30) function_call -> . NAME LPAREN args RPAREN

    LPAREN          shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 13
    NAME            shift and go to state 28
    STRING          shift and go to state 14

    expression                     shift and go to state 30
    function_call                  shift and go to state 15

state 12

    (23) expression -> LPAREN . expression RPAREN
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . PLUS expression
    (25) expression -> . MINUS expression
    (26) expression -> . NUMBER
    (27) expression -> . NAME
    (28) expression -> . STRING
    (29) expression -> . function_call
    (30) function_call -> . NAME LPAREN args RPAREN

    LPAREN          shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 13
    NAME            shift and go to state 28
    STRING          shift and go to state 14

    expression                     shift and go to state 31
    function_call                  shift and go to state 15

state 13

    (26) expression -> NUMBER .

    SEMICOLON       reduce using rule 26 (expression -> NUMBER .)
    PLUS            reduce using rule 26 (expression -> NUMBER .)
    MINUS           reduce using rule 26 (expression -> NUMBER .)
    TIMES           reduce using rule 26 (expression -> NUMBER .)
    DIVIDE          reduce using rule 26 (expression -> NUMBER .)
    RPAREN          reduce using rule 26 (expression -> NUMBER .)
    COMMA           reduce using rule 26 (expression -> NUMBER .)


state 14

    (28) expression -> STRING .

    SEMICOLON       reduce using rule 28 (expression -> STRING .)
    PLUS            reduce using rule 28 (expression -> STRING .)
    MINUS           reduce using rule 28 (expression -> STRING .)
    TIMES           reduce using rule 28 (expression -> STRING .)
    DIVIDE          reduce using rule 28 (expression -> STRING .)
    RPAREN          reduce using rule 28 (expression -> STRING .)
    COMMA           reduce using rule 28 (expression -> STRING .)


state 15

    (29) expression -> function_call .

    SEMICOLON       reduce using rule 29 (expression -> function_call .)
    PLUS            reduce using rule 29 (expression -> function_call .)
    MINUS           reduce using rule 29 (expression -> function_call .)
    TIMES           reduce using rule 29 (expression -> function_call .)
    DIVIDE          reduce using rule 29 (expression -> function_call .)
    RPAREN          reduce using rule 29 (expression -> function_call .)
    COMMA           reduce using rule 29 (expression -> function_call .)


state 16

    (10) function_def -> FN . NAME LPAREN params RPAREN LBRACE statements RBRACE

    NAME            shift and go to state 32


state 17

    (14) extern_decl -> EXTERN . NAME LPAREN extern_params RPAREN SEMICOLON

    NAME            shift and go to state 33


state 18

    (2) statements -> statements statement .

    VAR             reduce using rule 2 (statements -> statements statement .)
    NAME            reduce using rule 2 (statements -> statements statement .)
    RETURN          reduce using rule 2 (statements -> statements statement .)
    LPAREN          reduce using rule 2 (statements -> statements statement .)
    PLUS            reduce using rule 2 (statements -> statements statement .)
    MINUS           reduce using rule 2 (statements -> statements statement .)
    NUMBER          reduce using rule 2 (statements -> statements statement .)
    STRING          reduce using rule 2 (statements -> statements statement .)
    FN              reduce using rule 2 (statements -> statements statement .)
    EXTERN          reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACE          reduce using rule 2 (statements -> statements statement .)


state 19

    (4) statement -> expression SEMICOLON .

    VAR             reduce using rule 4 (statement -> expression SEMICOLON .)
    NAME            reduce using rule 4 (statement -> expression SEMICOLON .)
    RETURN          reduce using rule 4 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 4 (statement -> expression SEMICOLON .)
    PLUS            reduce using rule 4 (statement -> expression SEMICOLON .)
    MINUS           reduce using rule 4 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 4 (statement -> expression SEMICOLON .)
    STRING          reduce using rule 4 (statement -> expression SEMICOLON .)
    FN              reduce using rule 4 (statement -> expression SEMICOLON .)
    EXTERN          reduce using rule 4 (statement -> expression SEMICOLON .)
    $end            reduce using rule 4 (statement -> expression SEMICOLON .)
    RBRACE          reduce using rule 4 (statement -> expression SEMICOLON .)


state 20

    (19) expression -> expression PLUS . expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . PLUS expression
    (25) expression -> . MINUS expression
    (26) expression -> . NUMBER
    (27) expression -> . NAME
    (28) expression -> . STRING
    (29) expression -> . function_call
    (30) function_call -> . NAME LPAREN args RPAREN

    LPAREN          shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 13
    NAME            shift and go to state 28
    STRING          shift and go to state 14

    expression                     shift and go to state 34
    function_call                  shift and go to state 15

state 21

    (20) expression -> expression MINUS . expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . PLUS expression
    (25) expression -> . MINUS expression
    (26) expression -> . NUMBER
    (27) expression -> . NAME
    (28) expression -> . STRING
    (29) expression -> . function_call
    (30) function_call -> . NAME LPAREN args RPAREN

    LPAREN          shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 13
    NAME            shift and go to state 28
    STRING          shift and go to state 14

    expression                     shift and go to state 35
    function_call                  shift and go to state 15

state 22

    (21) expression -> expression TIMES . expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . PLUS expression
    (25) expression -> . MINUS expression
    (26) expression -> . NUMBER
    (27) expression -> . NAME
    (28) expression -> . STRING
    (29) expression -> . function_call
    (30) function_call -> . NAME LPAREN args RPAREN

    LPAREN          shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 13
    NAME            shift and go to state 28
    STRING          shift and go to state 14

    expression                     shift and go to state 36
    function_call                  shift and go to state 15

state 23

    (22) expression -> expression DIVIDE . expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . PLUS expression
    (25) expression -> . MINUS expression
    (26) expression -> . NUMBER
    (27) expression -> . NAME
    (28) expression -> . STRING
    (29) expression -> . function_call
    (30) function_call -> . NAME LPAREN args RPAREN

    LPAREN          shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 13
    NAME            shift and go to state 28
    STRING          shift and go to state 14

    expression                     shift and go to state 37
    function_call                  shift and go to state 15

state 24

    (5) statement -> VAR NAME . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 38


state 25

    (6) statement -> NAME ASSIGN . expression SEMICOLON
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . PLUS expression
    (25) expression -> . MINUS expression
    (26) expression -> . NUMBER
    (27) expression -> . NAME
    (28) expression -> . STRING
    (29) expression -> . function_call
    (30) function_call -> . NAME LPAREN args RPAREN

    LPAREN          shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 13
    NAME            shift and go to state 28
    STRING          shift and go to state 14

    expression                     shift and go to state 39
    function_call                  shift and go to state 15

state 26

    (30) function_call -> NAME LPAREN . args RPAREN
    (31) args -> . args COMMA expression
    (32) args -> . expression
    (33) args -> .
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . PLUS expression
    (25) expression -> . MINUS expression
    (26) expression -> . NUMBER
    (27) expression -> . NAME
    (28) expression -> . STRING
    (29) expression -> . function_call
    (30) function_call -> . NAME LPAREN args RPAREN

    RPAREN          reduce using rule 33 (args -> .)
    COMMA           reduce using rule 33 (args -> .)
    LPAREN          shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 13
    NAME            shift and go to state 28
    STRING          shift and go to state 14

    args                           shift and go to state 40
    expression                     shift and go to state 41
    function_call                  shift and go to state 15

state 27

    (9) statement -> RETURN expression . SEMICOLON
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . DIVIDE expression

    SEMICOLON       shift and go to state 42
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 23


state 28

    (27) expression -> NAME .
    (30) function_call -> NAME . LPAREN args RPAREN
